{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 1183,
  "lineage": "234530d4-ef50-7d34-9066-523bae8584c4",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb",
      "name": "asg_lb",
      "provider": "module.instances.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:743858840836:loadbalancer/app/asg-lb/ba9047c46a19ccf0",
            "arn_suffix": "app/asg-lb/ba9047c46a19ccf0",
            "dns_name": "asg-lb-2082705690.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:743858840836:loadbalancer/app/asg-lb/ba9047c46a19ccf0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "asg-lb",
            "security_groups": [
              "sg-00adfe1e192328372"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c6cd00ea959c13e"
              },
              {
                "subnet_id": "subnet-0d50badb8cdddc3d3"
              }
            ],
            "subnets": [
              "subnet-02c6cd00ea959c13e",
              "subnet-0d50badb8cdddc3d3"
            ],
            "vpc_id": "vpc-092fb3ac792c2a205",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.instances.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "asg_listener",
      "provider": "module.instances.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:743858840836:listener/app/asg-lb/ba9047c46a19ccf0/89524567e0355e5a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:743858840836:targetgroup/asg-lb-tg/21f0ed463314c9f1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:743858840836:listener/app/asg-lb/ba9047c46a19ccf0/89524567e0355e5a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:743858840836:loadbalancer/app/asg-lb/ba9047c46a19ccf0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.instances.aws_lb.asg_lb",
            "module.instances.aws_lb_target_group.asg_tg",
            "module.instances.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg_tg",
      "provider": "module.instances.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:743858840836:targetgroup/asg-lb-tg/21f0ed463314c9f1",
            "arn_suffix": "targetgroup/asg-lb-tg/21f0ed463314c9f1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:743858840836:targetgroup/asg-lb-tg/21f0ed463314c9f1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "asg-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-092fb3ac792c2a205"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "module.instances.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743858840836:security-group/sg-00adfe1e192328372",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00adfe1e192328372",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public SG",
            "name_prefix": "",
            "owner_id": "743858840836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-092fb3ac792c2a205"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743858840836:internet-gateway/igw-088ca5bf21a211840",
            "id": "igw-088ca5bf21a211840",
            "owner_id": "743858840836",
            "tags": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-092fb3ac792c2a205"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f3cc6c5bb6a6f18f",
            "owner_id": "743858840836",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088ca5bf21a211840",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-092fb3ac792c2a205"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public_association",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004d7014b9c94abec",
            "route_table_id": "rtb-0f3cc6c5bb6a6f18f",
            "subnet_id": "subnet-0d50badb8cdddc3d3"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_route_table.route_table_public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d898329f44582ccf",
            "route_table_id": "rtb-0f3cc6c5bb6a6f18f",
            "subnet_id": "subnet-02c6cd00ea959c13e"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_route_table.route_table_public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743858840836:subnet/subnet-0d50badb8cdddc3d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d50badb8cdddc3d3",
            "map_public_ip_on_launch": false,
            "owner_id": "743858840836",
            "tags": {
              "Name": "PUB Sub - 1"
            },
            "vpc_id": "vpc-092fb3ac792c2a205"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743858840836:subnet/subnet-02c6cd00ea959c13e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02c6cd00ea959c13e",
            "map_public_ip_on_launch": false,
            "owner_id": "743858840836",
            "tags": {
              "Name": "PUB Sub - 2"
            },
            "vpc_id": "vpc-092fb3ac792c2a205"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743858840836:vpc/vpc-092fb3ac792c2a205",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0723f07d6b67451f5",
            "default_route_table_id": "rtb-09fa1adac6f3dab5c",
            "default_security_group_id": "sg-0c6478ab293b9f3e5",
            "dhcp_options_id": "dopt-971b73ed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-092fb3ac792c2a205",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09fa1adac6f3dab5c",
            "owner_id": "743858840836",
            "tags": {
              "Name": "HA - VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}